# tokenchecker

./: .gitignore  README.md  action.yml  pyproject.toml  records.jsonl  tokenchecker.py
.github/workflows/: release.yml  token-usage.yml  update-prices.yml
scripts/: tokenchecker.py  update_prices.py
tokenchecker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
