[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenchecker"
dynamic = ["version"]
description = "Count AI coding-agent tokens per git branch and report them on GitHub PRs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Zohaib Ahmed" }]
keywords = ["ai", "tokens", "git", "claude-code", "codex", "gemini", "cursor", "usage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
tokenchecker = "tokenchecker:main"

[project.urls]
Homepage = "https://github.com/ZohaibAhmed/tokenchecker"
Repository = "https://github.com/ZohaibAhmed/tokenchecker"

# Single self-contained module by design: `install` vendors the file into repos
# and `install --global` copies it to ~/.tokenchecker, so it must never grow
# into a multi-file package.
[tool.setuptools]
py-modules = ["tokenchecker"]

[tool.setuptools.dynamic]
version = { attr = "tokenchecker.__version__" }
